--- a/new_app/src/app/pages/top-regions/top-regions-page.component.scss
+++ b/new_app/src/app/pages/top-regions/top-regions-page.component.scss
@@ -5,5 +5,6 @@
 
   table {
     flex: 0 0 auto;
+    width: auto;
   }
 }
